<?xml version="1.0"?>
<package>
  <name>belief_updater_process</name>
  <version>0.0.0</version>
  <description>The belief_updater_process package</description>

  <maintainer email="gdefermin@gmail.com">Guillermo De Fermin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>drone_process</build_depend>

  <run_depend>drone_process</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>roscpp</run_depend>

</package>
